# cookiecutter-data-snake

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/: dependabot.yaml
.github/workflows/: lint.yaml  lint.yml  pre-commit-autoupdate.yaml  tests.yaml
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Snakefile  environment.yaml  environment.yml  pyproject.toml  setup.cfg  setup.py
{{ cookiecutter.repo_name }}/.github/workflows/: lint.yaml  lint.yml
{{ cookiecutter.repo_name }}/{{ cookiecutter.python_module_name }}/: __init__.py
