[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "I"]

[tool.ruff.isort]
known-first-party = ["{{ cookiecutter.python_module_name }}"]

[tool.nbqa.addopts]
# ignore documentation errors in notebooks
ruff = ["--ignore=D"]

[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
license = "GPL-3.0"
authors = [
    "{{ cookiecutter.author_name }}",
]
packages = [
    { include = "{{ cookiecutter.python_module_name }}" },
]
