[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.email }}"}]
readme = "README.md"
license = {text = "GPL-3.0-only"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}"

[tool.nbqa.addopts]
# ignore documentation errors in notebooks
ruff = ["--ignore=D"]

[tool.pixi.dependencies]
ipykernel = ">=7.1.0,<8"
pre-commit = ">=4.4.0,<5"
python = "{{ cookiecutter.python_version }}"
snakemake = ">=9.13.7,<10"

[tool.pixi.pypi-dependencies]
{{ cookiecutter.python_module_name }} = {path = ".", editable = true}

[tool.pixi.workspace]
authors = ["{{ cookiecutter.author_name }} {{ cookiecutter.email }}>"]
channels = ["conda-forge", "bioconda"]
name = "{{ cookiecutter.repo_name }}"
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
version = "0.1.0"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.python_module_name }}"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "{{ cookiecutter.python_module_name }}"
module-root = ""
